<resources>
    <string name="app_name">ndgy</string>
    <string name="action_settings">Settings</string>

    <!--common-->
    <string name="common_imgdec">imgdec</string>
    <string name="common_text_man">男</string>
    <string name="common_text_woman">女</string>
    <string name="common_single_num_format">%d</string>
    <string name="common_text_action_save">保存</string>

    <!--CET-->
    <string name="cet_string_sum">总分： %s</string>
    <string name="cet_string_listen">听力： %s</string>
    <string name="cet_string_reading">阅读： %s</string>
    <string name="cet_string_compos">写作与翻译： %s</string>
    <string name="cet_string_name">姓\u3000\u3000名： %s</string>
    <string name="cet_string_exam_type">考试级别： %s</string>
    <string name="cet_string_school">学\u3000\u3000校： %s</string>
    <string name="cet_string_exam_num">准考证号： %s</string>
    <string name="cet_string_exam_time">考试时间： %s</string>

    <!--image-->
    <string name="img_photo">头像</string>
    <string name="img_background">背景</string>
    <string name="img_arrow">img_arrow</string>

    <!--menu-->
    <string name="action_edit">编辑</string>

    <!--signin signup-->
    <string name="txt_gender">性别</string>
    <string name="txt_gender_man">男</string>
    <string name="txt_gender_woman">女</string>
    <string name="txt_to_signin">去登录</string>
    <string name="txt_to_signup">去注册</string>
    <string name="txt_signin">登录</string>
    <string name="txt_signup">注册</string>
    <string name="txt_hint_username">邮箱/用户名/手机号</string>
    <string name="txt_hint_password">6位数字密码</string>
    <string name="txt_forget_password">忘记密码？</string>
    <string name="login_info_singuping">注册中，请稍后</string>
    <string name="login_info_singining">登录中，请稍后</string>
    <string name="login_info_input_username">请填写注册账号</string>
    <string name="login_info_password">密码为6位数字</string>
    <string name="login_info_singin_success">登录成功</string>
    <string name="login_info_singup_success">注册成功</string>
    <string name="login_info_singin_failed">登录失败，用户名或密码错误</string>
    <string name="login_info_singup_failed_exists">注册失败 %s 已被注册</string>
    <string name="login_info_singin_failed_with_code">登录失败，错误代码:%d</string>
    <string name="login_info_singup_failed_with_code">注册失败，错误代码:%d</string>
    <string name="login_info_verfiy">授权验证中</string>
    <string name="login_info_verfiy_success">授权成功</string>

    <!--page-->
    <string name="home">首页</string>

    <!--toolbar-->
    <string name="toolbar_title_score_query">成绩查询</string>
    <string name="toolbar_title_content_detail">正文详情</string>
    <string name="toolbar_title_about">关于本软件</string>
    <string name="toolbar_title_feedback">反馈意见</string>
    <string name="toolbar_title_login">登录注册</string>
    <string name="toolbar_title_message">消息中心</string>
    <string name="toolbar_title_publish_dynamic">发布动态</string>
    <string name="toolbar_title_setting">通用设置</string>
    <string name="toolbar_title_user_account">我的账号</string>
    <string name="toolbar_title_user_zone">主页详情</string>
    <string name="toolbar_title_user_zone_my">我的主页</string>
    <string name="toolbar_title_user_zone_edit">编辑空间</string>
    <string name="toolbar_title_more_circle">校内圈子</string>
    <string name="toolbar_title_more_circle_detail">帖子详情</string>
    <string name="toolbar_title_more_community">社团百态</string>
    <string name="toolbar_title_more_lost">失物招领</string>
    <string name="toolbar_title_more_lost_add">添加失物招领信息</string>
    <string name="toolbar_title_more_pager">纸飞机</string>
    <string name="toolbar_title_more_study">学习专区</string>
    <string name="toolbar_title_score_query_result">成绩查询结果</string>
    <string name="toolbar_title_study_detail">详情</string>
    <string name="toolbar_title_binding">登录教务系统</string>
    <string name="toolbar_title_score">我的成绩</string>

    <!--user-->
    <string name="user_zone_text_id">ID:%s</string>
    <string name="user_zone_text_exper">经验值:%d</string>
    <string name="user_zone_text_mi">米粒数:%d</string>

    <!--examScore-->
    <string name="score_toolbar_title">我的成绩(%1$s %2$s)</string>
    <string name="score_toast_welcome">欢迎 %s 同学</string>
    <string name="exam_score_head_title">总体成绩分析</string>
    <string name="exam_score_head_request_credit">要求学分\n%s</string>
    <string name="exam_score_head_gain_credit">获得学分\n%s</string>
    <string name="exam_score_head_nopass_credit">未通过学分\n%s</string>
    <string name="exam_score_head_need_credit">还需学分\n%s</string>
    <string name="exam_score_head_total_people">本专业总人数\n%s</string>
    <string name="exam_score_head_average_credit">平均学分绩点\n%s</string>
    <string name="exam_score_head_average_point">学分绩点总和\n%s</string>
    <string name="exam_score_content_year">%s学年</string>
    <string name="exam_score_content_term">第%s学期</string>
    <string name="exam_score_content_code">课程代码:%s</string>
    <string name="exam_score_content_name">课程名:%s</string>
    <string name="exam_score_content_credit">学分\n%s</string>
    <string name="exam_score_content_point">绩点\n%s</string>
    <string name="exam_score_content_usual_grade">平时\n%s</string>
    <string name="exam_score_content_mid_grade">期中\n%s</string>
    <string name="exam_score_content_final_grade">期末\n%s</string>
    <string name="exam_score_content_test_grade">实验\n%s</string>
    <string name="exam_score_content_make_grade">补考\n%s</string>
    <string name="exam_score_content_rebuild_grade">重修\n%s</string>
    <string name="exam_score_content_all_grade">总分\n%s</string>
    <string name="exam_score_content_school">学院:%s</string>
    <string name="grade_score_content_num">准考证号:%s (长按可复制)</string>
    <string name="grade_score_content_date">考试日期:%s</string>
    <string name="grade_score_content_listen">听力:%s</string>
    <string name="grade_score_content_read">阅读:%s</string>
    <string name="grade_score_content_text">写作:%s</string>

    <string name="user_fragment_nick_noset">未设置昵称</string>
    <string name="user_fragment_nick_nologin">未登录</string>
    <string name="user_fragment_user_levd">-</string>
    <string name="userzone_text_dynamicStr">（无）</string>
    <string name="userzone_text_objid">ID:%s</string>
    <string name="userzone_text_exper">经验值:%d</string>
    <string name="userzone_text_mi">米粒数:%d</string>
    <string name="userzone_string_none">未填写</string>
    <string name="userzone_string_recent">最近一条动态</string>
    <string name="userzone_string_name">真实姓名</string>
    <string name="userzone_string_sign">个性签名</string>
    <string name="userzone_string_birth">生日</string>
    <string name="userzone_string_locate">家乡</string>
    <string name="userzone_string_love">恋爱状态</string>
    <string name="userzone_string_depart">系别</string>
    <string name="userzone_string_qual">学历</string>
    <string name="userzone_string_school">毕业中学</string>
    <string name="userzone_edit_string_name">真实姓名</string>
    <string name="userzone_edit_string_sign">个性签名</string>
    <string name="userzone_edit_string_birth">生\u3000\u3000日</string>
    <string name="userzone_edit_string_locate">家\u3000\u3000乡</string>
    <string name="userzone_edit_string_love">恋爱状态</string>
    <string name="userzone_edit_string_depart">系\u3000\u3000别</string>
    <string name="userzone_edit_string_qual">学\u3000\u3000历</string>
    <string name="userzone_edit_string_school">毕业中学</string>

    <string name="useraccount_string_account">账号信息</string>
    <string name="useraccount_string_username">用户名</string>
    <string name="useraccount_string_nick">昵称</string>
    <string name="useraccount_string_reset_pwd">修改密码</string>
    <string name="useraccount_string_mobile">手机</string>
    <string name="useraccount_string_email">邮箱</string>
    <string name="useraccount_string_jiaowu">教务信息</string>
    <string name="useraccount_string_name">姓名</string>
    <string name="useraccount_string_school_number">学号</string>
    <string name="useraccount_string_logout">退出登录</string>

</resources>
