<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.shenhua.commonlibs.utils.DESUtils" />

        <variable
            name="user"
            type="com.shenhua.nandagy.bean.bmobbean.MyUser" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/common_toolbar_title_left" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.LinearLayoutCompat style="@style/UserAccountTitle">

                    <TextView
                        style="@style/UserAccountTitleText"
                        android:text="@string/useraccount_string_account" />

                    <RelativeLayout
                        android:id="@+id/account_layout_id"
                        style="@style/UserAccountInfoLayout">

                        <TextView
                            style="@style/UserAccountInfoLableText"
                            android:text="@string/useraccount_string_username" />

                        <TextView
                            style="@style/UserAccountInfoText"
                            android:drawableRight="@android:color/transparent"
                            android:text="@{user.username}" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/account_layout_nick"
                        style="@style/UserAccountInfoLayout">

                        <TextView
                            style="@style/UserAccountInfoLableText"
                            android:text="@string/useraccount_string_nick" />

                        <TextView
                            android:id="@+id/tv_useraccount_nick"
                            style="@style/UserAccountInfoText"
                            android:text="@{user.nick}" />
                    </RelativeLayout>

                    <RelativeLayout style="@style/UserAccountInfoLayout">

                        <TextView
                            style="@style/UserAccountInfoLableText"
                            android:text="@string/txt_gender" />

                        <include
                            layout="@layout/view_radio_group_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/account_layout_password"
                        style="@style/UserAccountInfoLayout">

                        <TextView
                            style="@style/UserAccountInfoLableText"
                            android:text="@string/useraccount_string_reset_pwd" />

                        <TextView style="@style/UserAccountInfoText" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/account_layout_phone"
                        style="@style/UserAccountInfoLayout">

                        <TextView
                            style="@style/UserAccountInfoLableText"
                            android:text="@string/useraccount_string_mobile" />

                        <TextView
                            android:id="@+id/tv_useraccount_phone"
                            style="@style/UserAccountInfoText"
                            android:text="@{user.mobilePhoneNumber}" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/account_layout_mail"
                        style="@style/UserAccountInfoLayout">

                        <TextView
                            style="@style/UserAccountInfoLableText"
                            android:text="@string/useraccount_string_email" />

                        <TextView
                            android:id="@+id/tv_useraccount_email"
                            style="@style/UserAccountInfoText"
                            android:text="@{user.email}" />
                    </RelativeLayout>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat style="@style/UserAccountTitle">

                    <TextView
                        style="@style/UserAccountTitleText"
                        android:text="@string/useraccount_string_jiaowu" />

                    <RelativeLayout style="@style/UserAccountInfoLayout">

                        <TextView
                            style="@style/UserAccountInfoLableText"
                            android:text="@string/useraccount_string_name" />

                        <TextView
                            style="@style/UserAccountInfoText"
                            android:drawableRight="@android:color/transparent"
                            android:text="@{DESUtils.instance.decrypt(user.name)}" />
                    </RelativeLayout>

                    <RelativeLayout style="@style/UserAccountInfoLayout">

                        <TextView
                            style="@style/UserAccountInfoLableText"
                            android:text="@string/useraccount_string_school_number" />

                        <TextView
                            style="@style/UserAccountInfoText"
                            android:drawableRight="@android:color/transparent"
                            android:text="@{DESUtils.instance.decrypt(user.name_num)}" />

                    </RelativeLayout>

                </android.support.v7.widget.LinearLayoutCompat>

                <Button
                    android:id="@+id/btn_logout"
                    style="@style/ButtonStyle.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="23dp"
                    android:text="@string/useraccount_string_logout" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</layout>