<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="加入南大共院app"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="与校友分享你的动态、经验和见解"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_divider_gray_vertical" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:divider="@drawable/bg_divider_gray_vertical"
        app:showDividers="beginning|middle">

        <com.shenhua.commonlibs.widget.ClearEditText
            android:id="@+id/signup_et_username"
            style="@style/EditSignStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/txt_hint_username"
            android:textColorHint="@color/colorPrimaryLight" />

        <com.shenhua.commonlibs.widget.ClearEditText
            android:id="@+id/signup_et_password"
            style="@style/EditSignStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/txt_hint_password"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textColorHint="@color/colorPrimaryLight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/EditSignStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_gender"
                android:textColor="@color/colorPrimaryLight" />

            <include layout="@layout/view_radio_group_gender"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/sign_switch_to_signin"
                style="@style/DialogTextActionStyle"
                android:text="@string/txt_to_signin" />

            <Button
                android:id="@+id/sign_btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_button_light_selector"
                android:text="@string/txt_signup" />

        </RelativeLayout>

    </android.support.v7.widget.LinearLayoutCompat>

</LinearLayout>